File Video Capture: allow IO operations from Device thread

FileVideoCapture is a test-only feature, enabled via two
command line flags. It overwrites any system webcam and
introduces a file playback instead. This CL allows the
video capture thread to access IO operations.

BUG=648989

TEST= Run e.g.
./out/gn/Chromium.app/Contents/MacOS/Chromium --use-fake-device-for-media-stream --use-file-for-fake-video-capture=~/Downloads/old_town_cross_420_720p50.y4m https://rawgit.com/Miguelao/demos/master/gum_simple.html

with the said file d'led from https://media.xiph.org/video/derf/y4m/

Review-Url: https://codereview.chromium.org/2358093002
Cr-Commit-Position: refs/heads/master@{#420503}